# agentic_AI_for_CAD

./: .gitignore  README.md  run_agentic_cad.bat
backend/: conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/scripts/: demo_agent.py  demo_holed_block.py  demo_plan_confirm.py  demo_toolroom.py  serve.py  verify_privacy.py
backend/src/agentic_cad/: config.py  privacy.py
backend/src/agentic_cad/agent/: __init__.py  clarify.py  execute.py  loop.py  plan.py  planner.py  router.py  validation.py
backend/src/agentic_cad/cad/: __init__.py  bootstrap.py  document.py  features.py  geometry.py  ingest.py  inspect.py  parts.py  recipes.py  simulation.py  surfaces.py
backend/src/agentic_cad/mcp_servers/: cad_server.py
backend/src/agentic_cad/memory/: episodic.py  reflect.py
backend/src/agentic_cad/server/: __init__.py  app.py  session.py
backend/src/agentic_cad/toolroom/: forge.py  sandbox.py  store.py  templates.py
backend/src/agentic_cad/tools/: __init__.py  cad_tools.py  registry.py
backend/tests/agent/: conftest.py  test_advanced_tools.py  test_agent_loop.py  test_cad_tools.py  test_clarify.py  test_edit_preview.py  test_mcp_server.py  test_phase3.py  test_plan_robustness.py  test_router_privacy.py  test_sim_tools.py
backend/tests/cad/: test_features.py  test_geometry.py  test_ingest.py  test_integration.py  test_parts.py  test_recipes.py  test_simulation.py  test_surfaces.py
backend/tests/memory/: conftest.py  test_memory.py
backend/tests/toolroom/: conftest.py  test_forge_store.py  test_sandbox.py
frontend/: app.js  sim.js  (+4 more)
(+3 files in other folders)
