[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-cad"
version = "0.1.0"
description = "Privacy-preserving agentic AI assistant for parametric CAD on FreeCAD"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Ved Ravindra Prakash" }]

# Runtime deps are installed in phases (see requirements.txt). Kept light here
# so `pip install -e .` does not pull the whole ML stack before it is needed.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
